--- a/.github/workflows/docker-api-test.yml
+++ b/.github/workflows/docker-api-test.yml
@@ -16,5 +16,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build -f dockerfiles/api/Dockerfile .
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Test the api container
       run: docker-compose run api sh -c "python manage.py test && flake8"
