--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r api/requirements.txt
     - name: Run Tests
       env: 
         DJANGO_SECRET_KEY: ${{secrets.DJANGO_SECRET_KEY}}
@@ -29,4 +29,4 @@ jobs:
         TWITTER_CONSUMER_KEY: ${{secrets.TWITTER_CONSUMER_KEY}}
         TWITTER_KEY_SECRET: ${{secrets.TWITTER_KEY_SECRET}}
       run: |
-        python app/manage.py test && flake8
+        python api/app/manage.py test && flake8
