--- a/.github/workflows/docker-deploy-heroku.yml
+++ b/.github/workflows/docker-deploy-heroku.yml
@@ -21,7 +21,7 @@ jobs:
           heroku_app_name: "cripto-sentiment-api"
           heroku_email: "caiow2001@gmail.com"
           usedocker: true
-          env_file: "../app.env"
+          env_file: ./app.env
           appdir: ./api
   deploy-front:
     runs-on: ubuntu-latest
