--- a/.github/workflows/docker-deploy-heroku.yml
+++ b/.github/workflows/docker-deploy-heroku.yml
@@ -21,8 +21,8 @@ jobs:
           heroku_app_name: "cripto-sentiment-api"
           heroku_email: "caiow2001@gmail.com"
           usedocker: true
-          env_file: ./app.env
           appdir: ./api
+          env_file: app.env
   deploy-front:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
