changed the gunicorn command in th api docker file

--- a/.github/workflows/docker-deploy-heroku.yml
+++ b/.github/workflows/docker-deploy-heroku.yml
@@ -21,6 +21,7 @@ jobs:
           heroku_app_name: "cripto-sentiment-api"
           heroku_email: "caiow2001@gmail.com"
           usedocker: true
+          appdir: api
   deploy-front:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
@@ -39,3 +40,4 @@ jobs:
           heroku_app_name: "cripto-sentiment-front"
           heroku_email: "caiow2001@gmail.com"
           usedocker: true
+          appdir: front
